[package]
name = "sbrd-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.11.0"

yaml-rust = "0.4"
serde_yaml = "0.8.23"

rand = "0.8.4"
chrono = "0.4.19"
evalexpr = "7.0.0"
