[package]
name = "sbrd-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.11.0"

serde_yaml = "0.8.23"
serde_json = "1.0.79"
csv = "1.1.6"

rand = { version = "0.8.4", features = ["alloc"] }
rand_distr = "0.4.3"
chrono = "0.4.19"
evalexpr = "7.0.0"
either = "1.6.1"
