[package]
name = "sbrd-gen"
version = "0.1.0"
edition = "2021"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
description = "A crate for Schema-Based Random Data GENerator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ogata-k/sbrd-gen"
categories = ["command-line-utilities", "development-tools", "science"]
keywords = ["generator", "cli", "random", "faker", "development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["alloc"] }
rand_distr = "0.4.3"
chrono = "0.4.19"
human-string-filler = "1.0.0"
rt-format = "0.3.0"
evalexpr = "7.0.0"
either = "1.6.1"

# Serialize or Deserialize
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.11.0"
serde_yaml = "0.8.23"
serde_json = "1.0.79"
csv = "1.1.6"

# Only use CLI
clap = { version = "3.1.0", features = ["cargo", "derive"] }
exitcode = "1.1.2"
human-panic = "1.0.3"